--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,6 +61,8 @@
         },
         "newlines-between": "always-and-inside-groups"
       }
-    ]
+    ],
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off"
   }
 }
