--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,6 +63,7 @@
       }
     ],
     "jsx-a11y/click-events-have-key-events": "off",
-    "jsx-a11y/no-static-element-interactions": "off"
+    "jsx-a11y/no-static-element-interactions": "off",
+    "@typescript-eslint/no-floating-promises": "off"
   }
 }
