--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "serve": "json-server --watch db.json --port 3004",
     "dev": "npm-run-all -p  build:dev serve",
     "lint:es": "eslint --ext .js,.jsx,.ts,.tsx src",
-    "lint:es:fix": "npm run lint:es -- --fix"
+    "lint:es:fix": "npm run lint:es -- --fix",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "github:pmmmwh/react-refresh-webpack-plugin",
     "@reduxjs/toolkit": "^1.9.3",
+    "@testing-library/dom": "^9.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "babel-jest": "^29.5.0",
     "classnames": "^2.3.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
@@ -37,17 +43,23 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-scss-transform": "^1.0.3",
+    "jest-svg-transformer": "^1.0.0",
     "json-server": "^0.17.3",
     "npm-run-all": "^4.1.5",
     "prettier": "2.8.1",
     "react-refresh": "^0.14.0",
     "react-refresh-typescript": "^2.0.8",
     "react-router-dom": "^6.10.0",
+    "react-test-renderer": "^18.2.0",
     "reset-css": "^5.0.1",
     "sass": "^1.59.3",
     "sass-loader": "^13.2.1",
     "style-loader": "^3.3.2",
     "svg-sprite-loader": "^6.0.11",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "4.9.4",
@@ -56,6 +68,7 @@
     "webpack-dev-server": "^4.13.1"
   },
   "dependencies": {
+    "@types/jest": "^29.5.0",
     "axios": "^1.3.4",
     "copy-webpack-plugin": "^11.0.0",
     "formik": "^2.2.9",
